# FAPPI

./: .gitignore  .prospector.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt  test-requirements.txt
migrations/: README  env.py
migrations/versions/: 92b3f93ae015_add_is_admin_field_to_users_table.py  c1f2c8f8820b_add_is_admin_for_users_table.py
src/: __init__.py  app.py  database.py  exceptions.py  models.py  schema.py  users.py  users_persister.py
src/auth/: auth.py  auth_utils.py
tests/: app.py  conftest.py  test_create_user.py  test_get_users.py  test_heartbeat.py  test_update_user.py
